--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -2,7 +2,7 @@
 
 <hr>
 <% @tweets.each do |tweet| %>
-  <h3> <a href='/tweet/<%= "#{tweet.id}" %>'> <%= tweet.user.username %> </a>
+  <h3> <a href='/tweets/<%= "#{tweet.id}" %>'> <%= tweet.user.username %> </a>
   <h3>
   <h4> <%= tweet.content %> <h4>
   <hr>
