--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,13 +1,19 @@
-<h1>All tweets</h1>
+<% @user = Helpers.current_user(session) %>
+<% if Helpers.is_logged_in?(session) %>
 
-<hr>
-<% @tweets.each do |tweet| %>
-<<<<<<< Updated upstream
-  <h3> <a href='/tweets/<%= "#{tweet.id}" %>'> <%= tweet.user.username %> </a>
-=======
-  <h3> <a href='/tweet/<%= "#{tweet.id}" %>'> <%= tweet.user.username %> </a>
->>>>>>> Stashed changes
-  <h3>
-  <h4> <%= tweet.content %> <h4>
-  <hr>
+	<h1>All tweets</h1>
+
+	<hr>
+	<% @tweets.each do |tweet| %>
+
+	  <h3> <a href='/tweets/<%= "#{tweet.id}" %>'> <%= tweet.user.username %> </a>
+
+	  <h3> <a href='/tweet/<%= "#{tweet.id}" %>'> <%= tweet.user.username %> </a>
+
+	  <h3>
+	  <h4> <%= tweet.content %> <h4>
+	  <hr>
+	<% end %>
+<% else %>
+  <a href="/users/login" />
 <% end %>
