--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,4 +1,16 @@
 
 	<h1>You tweeted:</h1>
-	<h2><%= @tweet.content %></h2>
+	<h2><%= @tweet.content %></h2></br>
+
+	<form action="/tweets/<%= @tweet.id %>/edit" method=get>
+		<input type="submit" value="Edit Post"/>
+	</form></br>
+
+	<form action="/tweets/<%= @tweet.id %>/delete" method="post">
+		<input id="hidden" type="hidden" name="_method" value="delete"/>
+		<input type="submit" value="Delete Tweet" />
+	</form>	
+
+	
+
 
