--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,15 +1,8 @@
-
-	<h1>All tweets</h1>
+<h1>Welcome, <%= Helpers.current_user(session).username %></h1>
+	<h2>All tweets</h2>
 
 	<hr>
 	<% @tweets.each do |tweet| %>
-
-	  <h3> <a href='/tweets/<%= "#{tweet.id}" %>'> <%= tweet.user.username %> </a>
-
-	  <h3> <a href='/tweet/<%= "#{tweet.id}" %>'> <%= tweet.user.username %> </a>
-
-	  <h3>
 	  <h4> <%= tweet.content %> <h4>
 	  <hr>
 	<% end %>
-
