--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,9 +1,10 @@
+<h1>Welcome to Fwitter</h1>
+    <h3>Log In Please</h3>
 
-
-<form action="/login" method="post">
-  <label>Name: </label></br>
-  <input type="text" name="username" id="username"/></br></br>
-  <label >Password: </label></br>
-  <input type="text" name="password" id="password"/></br></br>
-  <input type="submit" value="Log In" />
-</form>
+    <form action="/login" method="post">
+      <label for="username">Username</label>
+      <input type="text" name="username" id="username">
+      <label for="password">Password</label>
+      <input type="text" name="password" id="password">
+      <input type="submit" name="submit" value="Log In">
+    </form>
