add security checks in various places

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -7,6 +7,6 @@
 	<label for='content'>What's on your mind? </label></br></br>
 	<textarea type="text" name="tweet[content]" id="content" rows="35" cols="100"></textarea></br></br>
 
-	<input type="submit" value="submit" />
+	<input type='submit' name='submit' value='submit' id='submit'/>
 
 </form>	
