--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -6,5 +6,5 @@
       <input type="text" name="username" id="username">
       <label for="password">Password</label>
       <input type="text" name="password" id="password">
-      <input type="submit" name="submit" value="Log In">
+      <input type='submit' name='submit' id='submit' value='Log In'>
     </form>
