--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -3,7 +3,7 @@
 	<h2><%= @tweet.content %></h2></br>
 
 	<form action="/tweets/<%= @tweet.id %>/edit" method=get>
-		<input type="submit" value="Edit Post"/>
+		<input type="submit" value="Edit Tweet"/>
 	</form></br>
 
 	<form action="/tweets/<%= @tweet.id %>/delete" method="post">
