--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -8,7 +8,7 @@
 	<label>Current Tweet: "<%= @tweet.content %>"</label></br></br>
 	<textarea type="text" name="tweet[content]" id="content" rows="35" cols="100"></textarea></br></br>
 
-	<input type="submit" value="submit" />
+	<input type="submit" value="submit" id='submit'/>
 
 </form>	
 
