added username to list of all tweets

--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -3,6 +3,6 @@
 
 	<hr>
 	<% @tweets.each do |tweet| %>
-	  <h4> <%= tweet.content %> <h4>
+	  <h4> <%= tweet.user.username %> : <%= tweet.content %> <h4>
 	  <hr>
 	<% end %>
