--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,7 @@
-Welcome,
+<h1>Welcome, <%= current_user.username %></h1>
+<h2>The Latest Tweets</h2>
+<ul>
+<% @tweets.each do |tweet| %>
+  <li><a href="/tweets/<%=tweet.id%>"><%=tweet.content%></a></li>
+<% end %>
+</ul>
