--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,9 +1,9 @@
 <form method="POST" action="/signup">
-  <label for="user[username]">Username:</label>
-  <input name="user[username]" type="text"/>
-  <label for="user[email]">Email:</label>
-  <input name="user[email]" type="email"/>
-  <label for="user[username]">Password:</label>
-  <input name="user[password]" type="password"/>
+  <label for="username">Username:</label>
+  <input name="username" id="username" type="text"/>
+  <label for="email">Email:</label>
+  <input name="email" id="email" type="email"/>
+  <label for="password">Password:</label>
+  <input name="password" id"=password" type="password"/>
   <input type="submit" value="Create User"/>
 </form>
