--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,4 @@
-<% if logged_in? %>
-<a href="/logout">Log Out</a>
-<% else %>
-<a href="/login">Log In</a>
-<h2>Create A New Account:</h2>
-<a href="/signup">Sign Up</a>
-<% end %>
+
+ <h1>Welcome to Fwitter!</h1>
+
+  <p> Please <a href="/signup">Sign Up</a> or <a href="/login">Log In</a> to continue.</p>
