--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,8 +1,15 @@
-<h2>Please, Login </h2>
+<h1>Welcome, Please login to Fwitter</h1>
 <form action="/login" method="POST">
-  <label for="user[username]">Username:</label>
-  <input id="username" type="text" name="user[username]"/>
-  <label id="password" for="user[password]">Password:</label>
-  <input type="user[password]" name="user[password]" type="password"/>
+  <!-- <label for="user[username]">Username:</label> -->
+    <label for="username">Username:</label>
+  <!-- <input id="username" type="text" name="user[username]"/> -->
+  <input name="username" id="username" type="text"/>
+
+  <!-- <label id="password" for="user[password]">Password:</label>
+  <input name="password" id"=password" type="password"/> -->
+  <label for="password">Password:</label>
+  <input name="password" id"=password" type="password"/>
+  <!-- <input type="user[password]" name="user[password]" type="password"/> -->
   <input id="submit" type="submit"/>
 </form>
+
