--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,1 +1,10 @@
 Welcome, <%= current_user.id %>
+<a href="/tweets/new">New Tweet</a>
+
+ <ul>
+  <% @user.tweets.each do |tweet|%>
+  <li><%= tweet.content %> <a href="/tweets/<%=tweet.id%>/edit">EDIT</a></li>
+  <% end %>
+</ul>
+
+ <a href="/logout">Log Out</a> 
