--- a/app/views/tweets/tweets.html.erb
+++ b/app/views/tweets/tweets.html.erb
@@ -1,14 +1,8 @@
-<!-- # <% if flash.has?(:wrong_user) %>
-#   <%= flash[:wrong_user] %>
-# <% end %>
-# <% if flash.has?(:wrong_user_edit) %>
-#   <%= flash[:wrong_user_edit] %>
-# <% end %> -->
-<h1>Welcome, <%= @user.username %></h1>
-<% @tweets.each do |tweet| %>
-<ul>
-  <li><a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a></li>
-</ul>
+<p> Welcome <%= current_user.username %>
+<h2> Tweets </h2>
+
+ <% @tweets.each do |tweet| %>
+  <div>
+    <%= tweet.content %>
+  </div>
 <% end %>
-<a href="/tweets/new"><button>New Tweet</button></a>
-<a href="/logout"><button>Log Out</button></a>
