--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,6 +1,15 @@
-
+<!--
 <form method="POST" action="/tweets">
   <label>Content:</label><br>
   <input type="text" name="content" id="content"><br><br>
   <input type="submit" value="submit">
-</form>
+</form> -->
+
+<h2>Create a New Tweet</h2>
+
+ <form method = "post" action="/tweets">
+  <label for="content">Tweet:</label>
+  <input type="text" id="content" name='tweet[content]'>
+  <input type="submit" value="Create Tweet">
+
+ </form> 
