--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,4 +1,4 @@
-<form method="POST" action="/signup">
+<!-- <form method="POST" action="/signup">
   <label for="username">Username:</label>
   <input name="username" id="username" type="text"/>
   <label for="email">Email:</label>
@@ -6,4 +6,11 @@
   <label for="password">Password:</label>
   <input name="password" id"=password" type="password"/>
   <input type="submit" value="Create User"/>
+</form> -->
+
+<h3>Sign Up</h3>
+<form action="/signup" method="POST">
+  <input type="text" name="username" placeholder="Username:">
+  <input type="password" name="password" placeholder="Password:">
+  <input type="submit" value="Sign Up">
 </form>
