--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -11,5 +11,6 @@
   <label for="content">Tweet:</label>
   <input type="text" id="content" name='tweet[content]'>
   <input type="submit" value="Create Tweet">
+  <input class="btn btn-primary" type="submit">
 
- </form> 
+ </form>
