--- a/app/views/tweets/edit_tweet.html.erb
+++ b/app/views/tweets/edit_tweet.html.erb
@@ -5,4 +5,6 @@
   <label for="content">Tweet:</label>
   <input type="text" name="content" value="<%= @tweet.content %>">
   <input type="submit" value="submit">
+  <input class="btn btn-primary" type="submit">
+
 </form>
