--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -17,4 +17,5 @@
   <label for="password">Password:</label>
   <input type="password" name="user[password]" id="password">
   <input type="submit" value="Sign Up">
+  <input class="btn btn-primary" type="submit">
 </form>
