--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -6,4 +6,5 @@
   <label for="password">Password:</label>
   <input type="password" name="user[password]" id="password">
   <input type="submit" value="Log In">
+  <input class="btn btn-primary" type="submit">
 </form>
