--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -10,7 +10,8 @@
  <form method = "post" action="/tweets">
   <label for="content">Tweet:</label>
   <input type="text" id="content" name='tweet[content]'>
-  <input type="submit" value="Create Tweet">
+  <!-- <input type="submit" value="Create Tweet"> -->
+  <input type="submit" id="submit" value="Create Tweet">
   <input class="btn btn-primary" type="submit">
 
  </form>
