--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -11,7 +11,7 @@
   <label for="content">Tweet:</label>
   <input type="text" id="content" name='tweet[content]'>
   <!-- <input type="submit" value="Create Tweet"> -->
-  <input type="submit" id="submit" value="Create Tweet">
+  <input type="submit" id="submit" value="submit">
   <input class="btn btn-primary" type="submit">
 
  </form>
