--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -16,6 +16,6 @@
   <input type="text" name="user[email]" id="email">
   <label for="password">Password:</label>
   <input type="password" name="user[password]" id="password">
-  <input type="submit" value="Sign Up">
-  <input class="btn btn-primary" type="submit">
+  <input type="submit" value="submit">
+  <!-- <input class="btn btn-primary" type="submit"> -->
 </form>
