--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,6 +5,6 @@
   <input type="text" name="user[username]" id="username">
   <label for="password">Password:</label>
   <input type="password" name="user[password]" id="password">
-  <input type="submit" value="Log In">
-  <input class="btn btn-primary" type="submit">
+  <input type="submit" value="submit">
+  <!-- <input class="btn btn-primary" type="submit"> -->
 </form>
