--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -9,8 +9,8 @@
 
  <a href="/logout">Log Out</a>  -->
 
- <h2> Welcome, <%=current_user.username%>!</h2>
+ <h2> Welcome, <%=@user.username%>!</h2>
 
-  <h3><% current_user.tweets.each do |tweet| %></h3>
+  <h3><% @user.tweets.each do |tweet| %></h3>
  <h3> <%= tweet.content %></h3>
  <% end %>
