--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,7 +2,7 @@
   <%= flash[:error_login] %>
 <% end %>
 
-<h3>Login </h3>
+<h3>Login to Fwitter!</h3>
 <form method="post" action="/login">
   <input type="text" name="username" placeholder="username">
   <input type="password" name="password" placeholder="password">
