--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,5 +1,6 @@
-<form action="/tweets" method="post">
-  <input type="hidden" value="<%=@user.id%>" name="user_id">
-  <input name="content" type="text">
+<h2>New tweet</h2>
+<form action="/tweets" method="POST">
+  <input type="hidden" name="user_id" value="<%=@user.id%>" >
+  <p>Content: <input type="text" name="content"></p>
   <input type="submit" value="submit">
 </form>
