--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
-<h2>Welcome to Fwitter!</h2>
+<!-- <h2>Welcome to Fwitter!</h2>
 <p>Please signin or signup below:</p>
 
 <nav>
@@ -13,4 +13,8 @@
     <a href="/login"> Sign In </a>
   <%end %>
 
-</nav>
+</nav> -->
+
+<p>
+  <a href="/signup">Sigup</a> or <a href="/login">Login</a>
+</p>
