--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,8 +1,16 @@
-Welcome, <%= @user.username %>
+<!-- Welcome, <%= @user.username %>
 <h2> Tweets: </h2>
 
 <% Tweet.all.each do |tweet| %>
   <div>
     <%= tweet.content %>
   </div>
+<% end %> -->
+
+<h1>Welcome, <%= @user.username %></h1>
+
+<% @tweets.each do |tweet| %>
+  <p><%= tweet.content %> <a href="/tweets/<%= tweet.id %>">View Tweet</a></p>
 <% end %>
+
+<h3><a href="/logout">Logout</a>
