--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,7 +1,17 @@
-<h2> Edit Tweet </h2>
+<!-- <h2> Edit Tweet </h2>
 
 <form method="post" action="/tweets/<%=@tweet.id%>">
   <input id="hidden" type="hidden" name="_method" value="PATCH">
   <input type="text" name="content" value="<%= @tweet.content %>">
   <input type="submit" value="submit">
+</form> -->
+
+<h1>Edit Tweet<h1>
+
+<form action="/tweets/<%= @tweet.id %>" method="POST">
+  <input type="hidden" name="_method" value="patch" />
+
+  <input type="text" name="content" value="<%= @tweet.content %>" id="content" />
+
+  <input type="submit" name="submit" id="submit" value="Update Tweet" />
 </form>
