--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,5 +1,13 @@
-<h2>New tweet</h2>
+<!-- <h2>New tweet</h2>
 <form action="/tweets" method="POST">
   <p>Content: <input type="text" name="content"></p>
   <input type="submit" value="submit">
+</form> -->
+
+<h1>Create Tweet<h1>
+
+<form action="/tweets" method="POST">
+  <input type="text" name="content" />
+
+  <input type="submit" name="submit" id="submit" value="Create Tweet">
 </form>
