--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,8 +1,16 @@
-<h2><%= @tweet.content %></h2>
+<!-- <h2><%= @tweet.content %></h2>
 
 <form method="post" action="/tweets/<%=@tweet.id%>/delete">
   <input type="hidden" name="_method" value="DELETE">
   <input type="submit" value="Delete Tweet">
 </form>
 
-<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet </a>
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet </a> -->
+
+<h1><%= @tweet.content %></h1>
+
+<p><form action="/tweets/<%= @tweet.id %>" method="POST">
+  <input type="hidden" name="_method" value="delete"/>
+  <input type="submit" name="delete" value="Delete Tweet">
+</form>
+<p><a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a></p>
