--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,11 +1,23 @@
-<% if flash.has?(:error_login) %>
-  <%= flash[:error_login] %>
-<% end %>
+<!-- # <% if flash.has?(:error_login) %>
+#   <%= flash[:error_login] %>
+# <% end %>
+#
+# <h3>Login to Fwitter!</h3>
+# <form method="post" action="/login">
+#   <input type="text" name="username" placeholder="username">
+#   <input type="password" name="password" placeholder="password">
+#
+#   <input type="submit" value="submit">
+# </form> -->
 
-<h3>Login to Fwitter!</h3>
-<form method="post" action="/login">
-  <input type="text" name="username" placeholder="username">
-  <input type="password" name="password" placeholder="password">
+<h1>Login</h1>
 
-  <input type="submit" value="submit">
+<form action="/login" method="POST">
+  <label for="username">Username: </label>
+  <input type="text" name="username"> <br />
+
+  <label for="password">password: </label>
+  <input type="password" name="password"> <br />
+
+  <input type="submit" name="submit" id="submit" value="Login" />
 </form>
