--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,13 @@
-<p> Your tweets, <%= @user.username %></p>
+<!-- <p> Your tweets, <%= @user.username %></p>
 <%= @user.tweets.each do |tweet| %>
     <%= tweet.content %>
     <br><br>
+  <% end %> -->
+
+  <h1><%= @user.username %>'s tweets</h1>
+
+  <h2>Tweets<h2>
+
+  <% @user.tweets.each do |tweet| %>
+    <p><%= tweet.content %></p>
   <% end %>
