--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,11 +1,26 @@
-<% if flash.has?(:signup) %>
-    <%= flash[:signup] %>
-    <% end %>
+<!-- # <% if flash.has?(:signup) %>
+#     <%= flash[:signup] %>
+#     <% end %>
+#
+# <h3>Sign up</h3>
+# <form action="/signup" method="POST">
+#   <p>Username: <input type="text" name="username"></p>
+#   <p>Email: <input type="text" name="email"></p>
+#   <p>Password: <input type="text" name="password"></p>
+#   <input type="submit" value="signup">
+# </form> -->
 
-<h3>Sign up</h3>
+<h1>Signup</h1>
+
 <form action="/signup" method="POST">
-  <p>Username: <input type="text" name="username"></p>
-  <p>Email: <input type="text" name="email"></p>
-  <p>Password: <input type="text" name="password"></p>
-  <input type="submit" value="signup">
+  <label for="username">Username: </label>
+  <input type="text" name="username"> <br />
+
+  <label for="email">Email: </label>
+  <input type="email" name="email"> <br />
+
+  <label for="password">password: </label>
+  <input type="password" name="password"> <br />
+
+  <input type="submit" name="submit" value="Signup" />
 </form>
