--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,12 @@
-<!-- <h2>Welcome to Fwitter!</h2>
+<p>
+  <a href="/signup">Sigup</a> or <a href="/login">Login</a>
+</p>
+
+
+ <!-- <h2>Welcome to Fwitter!</h2>
 <p>Please signin or signup below:</p>
 
-<nav>
+
   <% if logged_in? %>
 
     <a href="/tweets/new"> Create Tweet </a>
@@ -11,10 +16,4 @@
   <% else %>
     <a href="/signup">Sign Up</a>
     <a href="/login"> Sign In </a>
-  <%end %>
-
-</nav> -->
-
-<p>
-  <a href="/signup">Sigup</a> or <a href="/login">Login</a>
-</p>
+  <%end %> -->
