--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,12 +4,11 @@
     <title>Fwitter</title>
   </head>
   <body>
-
-    <div class="container">
-      <h1>Welcome to Fwitter!</h1>
-      <h2>This is located in layout.erb!</h2>
-      <h2>Don't forget to <strong>yield</strong> your views!</h2>
-    </div>
-
+    <header class="bg-light">
+      <div class="container-fluid">
+        <h1>Welcome to Fwitter</h1>
+      </div>
+    </header>
+      <%=yield%>
   </body>
 </html>
